[package]
name = "geommdb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
geo = { version = "0.28.0", features = ['use-serde'] }
geo-types = "0.7.13"
rstar = { version = "0.12.0", features = ["serde"] }
bincode = "1.3.3"
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"

[build-dependencies]
version_check = "0.9"
